bluejay-typegen/tests/validation_cases/error/invalid_schema_path.rs
#[bluejay_typegen::typegen("")]
mod schema {}

fn main() {}
